NIFI-15514: Ensure that Parameter Contexts are assigned to all Proces… (#10815)
* NIFI-15514: Ensure that Parameter Contexts are assigned to all Process Groups in a Connector and not just the top-level group. Ensure that all components are started when Connector starts instead of just Processors and Controller Services
- When Working Context is recreated, ensure that we appropriately apply Parameter Context to newly created Process Group(s)
- Ensure that when we cleanup unused assets for Connectors that we consider any assets that are referenced in either the Working or Active context instead of just the Active context
- Ensure that when we stop Process Group we call all tasks in background threads instead of calling .thenRun which could potentially run in the foreground thread

* NIFI-15514: Update parameter context assignment to occur during sync.

* NIFI-15514: Fixes around ensuring that processors/controller services are properly configured and notified of any configuration changes when parameters change
- Removed the updateParameterContexts from ProcessGroup.updateFlow, which was added in a previous commit as we went a different direction for the fix

---------

Co-authored-by: Bob Paulin <bob@bobpaulin.com>