@@ -26,9 +26,10 @@ import org.apache.nifi.flow.VersionedExternalFlow;
 import org.apache.nifi.flow.VersionedProcessGroup;
 import org.apache.nifi.groups.ProcessGroup;
 import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.parameter.ParameterContext;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.Map;
 
 public class StandardFlowContext implements FrameworkFlowContext {
     private final ProcessGroup managedProcessGroup;
@@ -81,32 +82,33 @@ public class StandardFlowContext implements FrameworkFlowContext {
             versionedExternalFlow.setParameterContexts(new HashMap<>());
         }
 
-        final String parameterContextName = managedProcessGroup.getParameterContext().getName();
-        updateParameterContext(versionedExternalFlow.getFlowContents(), parameterContextName);
-
         try {
             managedProcessGroup.verifyCanUpdate(versionedExternalFlow, true, false);
         } catch (final IllegalStateException e) {
             throw new FlowUpdateException("Flow is not in a state that allows the requested updated", e);
         }
 
-        final VersionedExternalFlow withoutParameterContext = new VersionedExternalFlow();
-        withoutParameterContext.setFlowContents(versionedExternalFlow.getFlowContents());
-        withoutParameterContext.setParameterContexts(Collections.emptyMap());
-        managedProcessGroup.updateFlow(withoutParameterContext, managedProcessGroup.getIdentifier(), false, true, true);
+        final ParameterContext managedGroupParameterContext = managedProcessGroup.getParameterContext();
+        updateParameterContextNames(versionedExternalFlow.getFlowContents(), managedGroupParameterContext.getName());
+
+        final VersionedExternalFlow externalFlowWithResolvedParameters = new VersionedExternalFlow();
+        externalFlowWithResolvedParameters.setFlowContents(versionedExternalFlow.getFlowContents());
+        externalFlowWithResolvedParameters.setParameterContexts(Map.of());
+
+        managedProcessGroup.updateFlow(externalFlowWithResolvedParameters, managedProcessGroup.getIdentifier(), false, true, true);
+
+        rootGroup = groupFacadeFactory.create(managedProcessGroup, connectorLog);
 
         final ConnectorParameterLookup parameterLookup = new ConnectorParameterLookup(versionedExternalFlow.getParameterContexts().values(), assetManager);
         getParameterContext().updateParameters(parameterLookup.getParameterValues());
-
-        rootGroup = groupFacadeFactory.create(managedProcessGroup, connectorLog);
         parameterContext = parameterContextFacadeFactory.create(managedProcessGroup);
     }
 
-    private void updateParameterContext(final VersionedProcessGroup group, final String parameterContextName) {
+    private void updateParameterContextNames(final VersionedProcessGroup group, final String parameterContextName) {
         group.setParameterContextName(parameterContextName);
         if (group.getProcessGroups() != null) {
             for (final VersionedProcessGroup childGroup : group.getProcessGroups()) {
-                updateParameterContext(childGroup, parameterContextName);
+                updateParameterContextNames(childGroup, parameterContextName);
             }
         }
     }
